# pytest-junit-logging

./: .gitignore  .pre-commit-config.yaml  Dockerfile.test  README.md  docker-compose.test.yml  pyproject.toml  tox.ini
.github/workflows/: integration.yml  quality.yml  release.yml  test.yml
scripts/: test-all.sh  test-single.sh
src/pytest_junit_logging/: __init__.py  log_capture.py  plugin.py  xml_formatter.py
tests/: conftest.py  test_integration.py  test_log_capture.py  test_log_level_filtering.py  test_plugin_lifecycle.py  test_scope_distribution.py  test_xml_formatter.py
tests_example/: conftest.py  test_module_a.py  test_module_b.py
